--- a/Servlet-Demo_2_5/WebContent/WEB-INF/web.xml
+++ b/Servlet-Demo_2_5/WebContent/WEB-INF/web.xml
@@ -10,6 +10,6 @@ xsi:schemaLocation="http://java.sun.com/xml/ns/javaee  http://java.sun.com/xml/n
 
 <servlet-mapping>
    <servlet-name>HelloWorld</servlet-name>
-   <url-pattern>/HelloWorld</url-pattern>
+   <url-pattern>/sayHello</url-pattern>
 </servlet-mapping>
 </web-app>
